# smart-listing-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 10a05e93d21f_initial_schema.py
app/: __init__.py  main.py
app/api/: admin.py  api.py
app/bot/: context.py  keyboards.py  main.py  states.py
app/bot/handlers/: start.py  (+2 more)
app/core/: config.py  db.py  http.py  runtime.py  scheduler.py  time.py
app/models/: __init__.py  ai_summary.py  event.py  item.py  monitor_match.py  monitor_profile.py  notification.py  notification_delivery.py  run.py  source.py  telegram_chat.py  telegram_user.py
app/parsers/: base.py  books_toscrape.py  webscraper_ecommerce.py
app/repositories/: deliveries.py  events.py  items.py  monitor_matches.py  monitor_profiles.py  notifications.py  query_filters.py  runs.py  sources.py  summaries.py  telegram_registry.py
app/schemas/: event.py  run.py  source.py
app/services/: diff_engine.py  digest_builder.py  gemini.py  monitor_evaluator.py  monitor_profiles.py  monitor_runner.py  normalization.py  priority_engine.py  run_dispatcher.py  run_lock.py  source_health.py  suppression.py  telegram.py  telegram_notifier.py  telegram_registry.py  types.py
app/web/: context.py  page_builders.py  params.py
docs/: case-study.md
scripts/: container_start.sh  run_single_process.sh  seed_source.py
tests/: conftest.py  test_admin_pages.py  test_diff_engine.py  test_gemini.py  test_items_repository.py  test_monitor_delivery.py  test_monitor_evaluator.py  test_notifications.py  test_parser_books.py  test_parser_webscraper.py  test_runner.py  test_runtime.py  test_smoke_admin_api.py  test_suppression.py  test_time.py
(+27 files in other folders)
